Update to java 11 and gradle 5.0